--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,6 +42,30 @@
 
     <div class="container">
       <a href="/crate" class="btn btn-outline-primary mt-4"><i class='bx bxs-plus-circle bx-md' ></i></a>
+      <table>
+        <thead>
+          <tr class="bg-primary text-white">
+            <th scope="col">ID</th>
+            <th scope="col">USUARIO</th>
+            <th scope="col">ROL</th>
+            <th scope="col">ACCIONES</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% results.forEach((user) => { %>}
+          <tr>
+            <td><%= user.id%></td>
+            <td><%= user.user%></td>
+            <td><%= user.rol%></td>
+            <td>
+              <a href="/edit" class="btn btn-outline-info">editar</a>
+              <a href="/delete" class="btn btn-outline-info">borrar</a>
+            </td>
+
+          </tr>
+          <%}) %>
+        </tbody>
+      </table>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
