mostrando los registros

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -53,11 +53,11 @@
               <label for="user" class="form-label"> Rol</label>
               <select id="rol" name="rol" class="form-control" aria-label="Default select example">
                 <option value="admin" selected>Admin</option>
-                <option value="data entry" selected>Data</option>
+                <option value="data entry" selected>Data Entry</option>
               </select>
             </div>
-<button type="submit" class="btn btn-primary" tabindex="5">Guardar</button>
-<a href="/" class="btn btn-secondary">Cancelar</a>
+          <button type="submit" class="btn btn-primary" tabindex="5">Guardar</button>
+           <a href="/" class="btn btn-secondary">Cancelar</a>
          
           </form>
         </div>
