--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,7 @@
     </nav>
 
     <div class="container">
-      <a href="/crate" class="btn btn-outline-primary mt-4"><i class='bx bxs-plus-circle bx-md' ></i></a>
+      <a href="/create" class="btn btn-outline-primary mt-4"><i class='bx bxs-plus-circle bx-md' ></i></a>
       <table class="table table-bordered table-striped text center mt-7">
         <thead>
           <tr class="bg-primary text-white">
